traefik/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  name: traefik-dashboard
  namespace: ${NAMESPACE}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.${BASE_DOMAIN}`)
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik.${BASE_DOMAIN}
